# GameOfLife

./: CMakeLists.txt  main.cpp
include/: Game.h  LifeBoard.h  LifeBoardBase.h
source/: Game.cpp  LifeBoardBase.cpp  LifeBoardCircle.cpp  LifeBoardHexagon.cpp  LifeBoardRect.cpp
